--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-select": "^5.10.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
