--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
     "yup": "^1.6.1"
   },
